# VantageDemo

./: .env  .gitignore  Dockerfile  README.md  aws-deploy.sh  deploy.ps1  deploy.sh  docker-compose.yml  load-dump.ps1  main.py  nohup.out  pyproject.toml  requirements.txt  restore-neo4j.ps1  robots.txt
app/: __init__.py  main.py
app/api/: chat.py
app/core/: config.py
app/db/: neo4j_client.py
app/models/: chat.py
app/services/: gemini_service.py
neo4j-data/data/dbms/: auth
neo4j-dump/: dump.dump
templates/: index.html  landing.html
